--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-<tittle>noah dinh 2024-25 website</tittle>
-    </head>
-
-</body>
-    <div>
-         <nav> 
-
-        <   /nav>
+  <head>
+    <tittle>noah dinh 2024-25 website</tittle>
+    <link rel="stylesheet" href="style.css">
+  </head>
+<body>
+    <div id="all-contents">
+         <nav>
+            <h1>the lobotomy kaisen is real</h1>
+            <ul id="nav-ul">
+             <li class="nav li"></li>
+                <a href="index.html"> Home </a>
+             </li>
+             <li class="nav li">
+                <a href="portfolio.html"> Portfolio </a>
+             </li>
+            </ul>
+         </nav>
         
             <main>
+                <!-- Sidebar section -->
+                    <div class="sidebar">
 
+
+<img class="sidebar-ig" src= "https://i.ytimg.com/vi/pc7i_fV-yXM/sddefault.jpg"
+
+                    </div>
+
+                    <!-- Content section-->
+                    <div id="all-contents">
+                    <h2>Noah</h2>
+                    <p>Student at dtsma</p>
+
+                    <!-- Interest section -->
+                    <div>
+                      <h3>Interest</h3>
+                      <ul>
+                        <li>Playing games</li>
+                        <li>Soccer</li>
+                        <li>Sleeping</li>
+                      </ul>
+                </div>
             </main>
         </div>
-    </boday>
+    </body>
 </html>
