--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <tittle>noah dinh 2024-25 website</tittle>
+    <title>noah dinh 2024-25 website</title>
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
