--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-    <head> <title> noah dinh 2024-25 website </title>
+    <head>
+         <title> noah dinh 2024-25 website </title>
+         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -21,7 +23,9 @@
                 <div class="content">
                     <h1>Portfolio</h1>
                     <ul id="portfolio">
-    
+                        <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                        <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+                        <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                     </ul>
                 </div>
             </main>
