--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -66,6 +66,7 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
+			var PositionX = 0
 
 
 
@@ -75,8 +76,8 @@
 			turn it around! 
 			*/
 			function update() {
-
-
+			var positionX = positionX + 10;	
+			moveBoxTo(PositionX)
 			};
 
 			/* 
