--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -33,7 +33,7 @@
 	<div class="box">?</div>
 
 	<script>
-		(function () {
+		function () {
 			'use strict'
 			/* global jQuery */
 
@@ -65,8 +65,10 @@
 			/////////////////// YOUR CODE BELOW HERE /////////////////////////
 			//////////////////////////////////////////////////////////////////
 
-			// TODO 2 - Variable declarations 
-			var PositionX = 0
+			// TODO 2 - Variable declarations
+			var points = 0
+			var positionX = 0
+			var speed = 10
 
 
 
@@ -76,19 +78,32 @@
 			turn it around! 
 			*/
 			function update() {
-			var positionX = positionX + 10;	
-			moveBoxTo(PositionX)
-			};
+			positionX = positionX + speed;
+			moveBoxTo(positionX)
 
+		if(positionX > boardWidth) {
+			speed = -speed;
+		}
+			else if (positionX < 0) {
+				speed = -speed;
+			}
+			
+		}
+			};
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
+			positionX = 0;
+			points = points + 1
+			speed = speed + 3
+			changeBoxText(points);
 
 			};
+
+			
 
 
 
